Fixed the large spacing glitch between rows. Just took out the flex: 1 in book-area css class. Also started to add functionality in the options menu

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     font-family: "gotham-medium";
     color: white;
     /*background-color: #152238;*/
-    background-color: rgb(6, 19, 41)
+    background-color: rgb(11, 25, 40)
 }
 
 .main-page {
@@ -90,7 +90,6 @@ body {
 
 .library .book-area {
     margin-top: 40px;
-    flex: 1;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -120,7 +119,8 @@ body {
 .book-holder .bottom-area .read-circle {
     height: 10px;
     width: 10px;
-    background-color: forestgreen;
+    /*background-color: forestgreen;*/
+    background-color: grey;
     border-radius: 50%;
 }
 
